Fixed ConsumerFilterManager